# CryptographicEquations

./: .gitignore  CMakeLists.txt  CryptographicEquations  Makefile  README.md
include/: KeyHandler.h  ModularMath.h  SubstitutionCiphers.h  TranspositionCiphers.h  Utility.h
src/: Test.txt  main.c  test  test.c
